2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.cc (PrefDialog::on_response): Suggest a sync
	to the GConf client when the dialog is closed.

2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade: Remove empty string properties and all
	GtkEntry "invisible_char" properties.  The latter had no purpose
	other than to annoy the translators.

	* ui/prefdialog.glade: ditto.

2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (selection_clipboard): New string constant
	defining the name of the selection to use for the clipboard.
	(MainWindow::on_cut): Use the selection_clipboard constant.
	(MainWindow::on_copy): ditto
	(MainWindow::on_paste): ditto.

2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h} (Controller::edit_actions): Rename from
	clip_actions.
	(Controller::erase): Add action.
	(Controller::load_xml): Fetch cut, copy, paste and delete menu
	items from the glade file.

	* src/mainwindow.{cc,h} (MainWindow::on_{cut,copy,paste,erase}):
	Add and implement new signal handlers.
	(MainWindow::connect_signals): Connect the cut, copy, paste and
	erase actions to the new signal handlers.
	(MainWindow::on_filetree_switch_buffer): Enable or disable the
	edit actions based on the editability of the file buffer.

2004-06-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h} (Controller): Add an Edit menu, as well
	as a Cut, Copy and Paste menu items.

	* ui/mainwindow.glade: As above, and move Undo and Preferences
	into the Edit menu.

2004-06-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* po/Makevars (XGETTEXT_OPTIONS): Recent intltool now parses the
	Makevars file, thus set this variable to the options we want.

2004-06-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Get rid of the redundant
	-DREGEXXER_LOCALEDIR=\""$(datadir)/locale"\" definition.

	* src/main.cc (locale_directory): New string constant.